Second commit - Final

--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
           </section>
         </div>
       </div>
-      <img src="img/mic.jpg" alt="Ancient Stage" class="antique-stage" style="border-radius: 15px;">
+      <img src="img/mic.jpg" alt="Ancient Stage" class="antique-stage">
     </div>
   </header>
 
