--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
     }
     
     .button span:after {
-      content: '\00bb';
+      content: '\00bb'; /*Double arrow right-facing */
       position: absolute;
       opacity: 0;
       top: 0;
